feat: Dock buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,9 @@ body {
 }
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
   :root {
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
@@ -52,6 +55,7 @@ body {
     --color-3: 210 100% 63%;
     --color-4: 195 100% 63%;
     --color-5: 90 100% 63%;
+    scroll-behavior: smooth;
   }
   .dark {
     --background: 240 10% 3.9%;
